Fix sketch.js path - use relative ./sketch.js for Vercel cleanUrls compatibility

--- a/genuary-skills/days/day03/index.html
+++ b/genuary-skills/days/day03/index.html
@@ -179,7 +179,7 @@
     <div class="genuary-tag">#genuary #genuary2026 #creativecoding #fibonacci</div>
   </footer>
 
-  <script src="sketch.js"></script>
+  <script src="./sketch.js"></script>
   <script>
     let isPaused = false;
     
