--- a/genuary/days/day02/index.html
+++ b/genuary/days/day02/index.html
@@ -181,7 +181,7 @@
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
-  <script src="sketch.js"></script>
+  <script src="./sketch.js"></script>
   <script>
     let isPaused = false;
     let gifRecording = false;
