--- a/genuary-skills/days/day01/index.html
+++ b/genuary-skills/days/day01/index.html
@@ -179,7 +179,7 @@
     <div class="genuary-tag">#genuary #genuary2026 #creativecoding</div>
   </footer>
 
-  <script src="sketch.js"></script>
+  <script src="./sketch.js"></script>
   <script>
     let isPaused = false;
     
