--- a/index.html
+++ b/index.html
@@ -355,12 +355,14 @@
       'genuary': {
         1: 'day01-breathing-circles.png',
         2: 'day02.png',
-        3: 'day03.png'
+        3: 'day03.png',
+        4: 'day04.png'
       },
       'genuary-skills': {
         1: 'day01.png',
         2: 'day02.png',
-        3: 'day03.png'
+        3: 'day03.png',
+        4: 'day04.png'
       }
     };
 
