--- a/index.html
+++ b/index.html
@@ -356,13 +356,15 @@
         1: 'day01-breathing-circles.png',
         2: 'day02.png',
         3: 'day03.png',
-        4: 'day04.png'
+        4: 'day04.png',
+        5: 'day05.png'
       },
       'genuary-skills': {
         1: 'day01.png',
         2: 'day02.png',
         3: 'day03.png',
-        4: 'day04.png'
+        4: 'day04.png',
+        5: 'day05.png'
       }
     };
 
