--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
         2: 'day02.png',
         3: 'day03.png',
         4: 'day04.png',
-        5: 'day05.png'
+        5: 'day05.png',
+        6: 'day06-night.png'
       },
       'genuary-skills': {
         1: 'day01.png',
