✨ Day 06: Lights on/off - The Koi's Secret (skills version)
A gorgeous koi fish that breathes between flesh and skeleton.
- Beautiful orange/white/gold koi with scale texture
- Glowing cyan skeleton with beating pink heart
- Smooth dreamy transition between states
- Floating bubbles (light) and particles (dark)
- Water caustics and atmospheric effects

--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
         2: 'day02.png',
         3: 'day03.png',
         4: 'day04.png',
-        5: 'day05.png'
+        5: 'day05.png',
+        6: 'day06.png'
       }
     };
 
