🖼️ Add Day 07 to gallery (genuary-skills)

--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
         3: 'day03.png',
         4: 'day04.png',
         5: 'day05.png',
-        6: 'day06.png'
+        6: 'day06.png',
+        7: 'day07-gatekeeper.png'
       }
     };
 
